Add q1 micro-benchmark with (simplified) spark map